<resources>
    <string name="app_name">Studentinfo</string>
    <string name="enroll">Enroll</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="enter_your_roll_number">Enter your Roll-number:</string>
    <string name="e_g_arun">e.g.Arun</string>
    <string name="e_g_20ab10011">e.g.20AB10011</string>
    <string name="successfully_enrolled">successfully enrolled.</string>
    <string name="welcome">welcome</string>
    <string name="textviewsecondary">TextView</string>
    <string name="textviewsecondary1">TextView</string>
</resources>